--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,9 @@
 
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation"
             android:exported="true"
-            android:label="@string/app_name"
+            android:screenOrientation="landscape"
             android:theme="@style/Theme.Nidocaiptv.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
