--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,16 @@
+def static getenv(path = "../.env") {
+    def env = [:]
+
+    def file = new File(path)
+    if (file.exists()) {
+        file.eachLine { line ->
+            def (name, value) = line.tokenize("=")
+            env[name.trim()] = value.trim()
+        }
+    }
+    return env
+}
+
 plugins {
     id 'com.android.application'
 }
@@ -18,12 +31,10 @@ android {
     
     signingConfigs {
         release {
-            // You need to specify either an absolute path or include the
-            // keystore file in the same directory as the build.gradle file.
-            storeFile file("release-key.keystore")
-            keyAlias env["RELEASE_KEY_ALIAS"]
-            storePassword env["RELEASE_STORE_PASSWORD"]
-            keyPassword env["RELEASE_KEY_PASSWORD"]
+            storeFile file("release-key.jks")
+            keyAlias System.getenv("RELEASE_KEY_ALIAS")
+            storePassword System.getenv("RELEASE_STORE_PASSWORD")
+            keyPassword System.getenv("RELEASE_KEY_PASSWORD")
         }
     }
 
@@ -31,6 +42,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
