--- a/.github/workflows/android-assemble.yml
+++ b/.github/workflows/android-assemble.yml
@@ -23,5 +23,5 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       env:
-        RELEASE_STORE_PASSWORD: ${{secrets:RELEASE_STORE_PASSWORD}}
+        RELEASE_STORE_PASSWORD: ${{secrets.RELEASE_STORE_PASSWORD}}
       run: ./gradlew assemble
