--- a/.github/workflows/android-assemble.yml
+++ b/.github/workflows/android-assemble.yml
@@ -30,5 +30,5 @@ jobs:
     - uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: apk
-        folder: app/build/outputs/apk
+        folder: app/build/outputs
         target-folder:
