--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,20 +2,14 @@ plugins {
     id 'com.android.application'
 }
 
-
-static def generateVersionCode() {
-    def result = "git rev-list HEAD --count".execute().text.trim() //unix
-    if(result.empty) result = "PowerShell -Command git rev-list HEAD --count".execute().text.trim() //windows
-    if(result.empty) throw new RuntimeException("Could not generate versioncode on this platform? Cmd output: ${result.text}")
-    return result.toInteger()
-}
-
 android {
     namespace 'de.nidoca.webview.iptv'
     compileSdk 33
 
+    def versionCode = "git rev-list HEAD --count".execute().text.trim() //unix
+    if(result.empty) result = "PowerShell -Command git rev-list HEAD --count".execute().text.trim() //windows
+    if(result.empty) throw new RuntimeException("could not generate versioncode on this platform? cmd output: ${result.text}")
     def majorVersion = 1
-    def versionCode = generateVersionCode();
     
     defaultConfig {
         applicationId "de.nidoca.webview.iptv"
