--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     compileSdk 33
 
     def versionCode = "git rev-list HEAD --count".execute().text.trim() //unix
-    if(result.empty) result = "PowerShell -Command git rev-list HEAD --count".execute().text.trim() //windows
-    if(result.empty) throw new RuntimeException("could not generate versioncode on this platform? cmd output: ${result.text}")
+    if(versionCode.empty) versionCode = "PowerShell -Command git rev-list HEAD --count".execute().text.trim() //windows
+    if(versionCode.empty) throw new RuntimeException("could not generate versioncode on this platform? cmd output: ${versionCode.text}")
     def majorVersion = 1
     
     defaultConfig {
