--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,12 @@ plugins {
 android {
     namespace 'de.nidoca.webview.iptv'
     compileSdk 33
+ 
+    def versionCode = 1
+    def versionCode = "git rev-list HEAD --count".execute().text.trim() //unix
+    if(versionCode.empty) versionCode = "PowerShell -Command git rev-list HEAD --count".execute().text.trim() //windows
+    if(versionCode.empty) throw new RuntimeException("could not generate versioncode on this platform? cmd output: ${versionCode.text}")
+    def majorVersion = 1
     
     defaultConfig {
         applicationId "de.nidoca.webview.iptv"
