--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         minSdk 26
         targetSdk 33
         versionCode 1
-        versionName "1.${commitCountOut}"
+        versionName "1" + commitCountOut
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
