--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,14 +11,15 @@ android {
     proc.consumeProcessOutput(commitCountOut, commitCountError)
     proc.waitForOrKill(1000)
      
-    def majorVersion = 1
+    def mVersion = 1
+    def vName = "1"
     
     defaultConfig {
         applicationId "de.nidoca.webview.iptv"
         minSdk 26
         targetSdk 33
         versionCode 1
-        versionName "1.$commitCountOut"
+        versionName vName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
