--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     proc.waitForOrKill(1000)
      
     def miVersion = commitCountOut as int
-    def vName = "version 1."
+    def vName = "version 1.${miVersion}"
     
     defaultConfig {
         applicationId "de.nidoca.webview.iptv"
