--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,14 +11,16 @@ android {
     proc.consumeProcessOutput(commitCountOut, commitCountError)
     proc.waitForOrKill(1000)
      
-    def miVersion = commitCountOut as int
-    def vName = "version 1.${miVersion}"
+    def commitCountOutAsInt = commitCountOut as int
+    def vName = "version 1.${commitCountOutAsInt}"
+    
+    println "build new version, name: ${vName}"
     
     defaultConfig {
         applicationId "de.nidoca.webview.iptv"
         minSdk 26
         targetSdk 33
-        versionCode miVersion
+        versionCode commitCountOutAsInt
         versionName vName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
