--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     namespace 'de.nidoca.webview.iptv'
     compileSdk 33
  
- 
+    def versionPropsFile = file('version.properties')
     def Properties versionProps = new Properties()
     versionProps.load(new FileInputStream(versionPropsFile))
     def code = versionProps['VERSION_CODE'].toInteger() + 1
