--- a/.github/workflows/android-assemble.yml
+++ b/.github/workflows/android-assemble.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        all_commits: true
+        all_tags: true
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
