--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,14 @@ android {
     def proc = 'git rev-list --first-parent --count origin/main'.execute()
     proc.consumeProcessOutput(commitCountOut, commitCountError)
     proc.waitForOrKill(1000)
-    println "aaaaaaaaaa: ${commitCountOut} ${commitCountError}"
+    println "git commit count: ${commitCountOut}, git commit error: ${commitCountError}"
 
     def code = commitCountOut.toString().toInteger()
-    def vName = "version 1.${code}"
     
-
+    def minVersion = code % 1000 / 110
+    def majVersion = ((code - minVersion)/1000))+1
+    
+    def vName = "version ${majVersion}.${minVersion}"
     
     println "build new version, name: ${vName}"
     
