--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,9 @@ android {
     def code = commitCountOut.toString().toInteger()
     
     def minVersion = code % 1000
-    def majVersion = ((code - minVersion)/1000))+1
     
-    def vName = "version ${majVersion}.${minVersion}"
+    
+    def vName = "version ${majVersion}."
     
     println "build new version, name: ${vName}"
     
