--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     def minVersion = code % 1000
     
     
-    def vName = "version ${majVersion}."
+    def vName = "version ${minVersion}"
     
     println "build new version, name: ${vName}"
     
